# devising-machine

./: MANIFEST.in  README.md  pyproject.toml
src/devising_machine/: config.py  machina.yaml  machine.py
tests/: test_cli.py  test_e2e.py  test_llm_soup.py  test_utilities.py
